--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -57,7 +57,7 @@
     <label for="text">Your sms</label>
     <br/>
     <textarea id="text" rows="2" cols="5"
-           placeholder="enter your name..">
+              placeholder="enter your name.."></textarea>
 </form>
 
 <h2>youtube</h2>
